# ensemble-managed-array

./: .gitignore  CMakeLists.txt  README.md
inc/ensemble/: managed-array.hpp
src/: managed-array.cpp  managed-array.hpp
src/ensemble/: managed-array.cpp
test/: main.cpp
